test/parsing/vass/wrong-unended-string-4.good
wrong-unended-string-4.chpl:2: EOF in string
wrong-unended-string-4.chpl:2: syntax error
